# aws-limit-monitor

./: .gitignore  README.md  buildspec.yml  pipeline.yaml
customization/: aws_secrets.py  build-customization.sh  index.py  pyproject.toml
deployment/: limit-monitor-spoke.template  limit-monitor.template  service-quotas-checks.template
source/services/customhelper/lib/: index.js
source/services/limitreport/lib/: limit-report.js
