[tool.poetry]
name = "customization"
version = "0.1.0"
description = ""
authors = ["Wahab Syed <wahasyed@amazon.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
boto3 = "^1.15.16"
autopep8 = "^1.5.4"
pylint = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
